--- a/ELO_LOCACAO/packages.config
+++ b/ELO_LOCACAO/packages.config
@@ -1,16 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="7.0.2" targetFramework="net472" />
+  <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net472" />
+  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net472" />
   <package id="FontAwesome.Sharp" version="6.3.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.21.9" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.3.5" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.3.5" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1004" targetFramework="net472" />
   <package id="MySql.Data" version="8.1.0" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net472" />
   <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net472" />
